# mcu_platform_cmake

./: .gitmodules  README.md
Libraries/Drivers/STM/F4/: CMakeLists.txt
Libraries/RTOS/FreeRTOS/: CMakeLists.txt
